# c_omponents

./: README.md  meson.build
.github/workflows/: build_and_test.yml
include/: color.h  g_array.h  hidden_vec.h  logger.h  vec.h
src/: g_array.c  vec.c
tests/: test-vec.c
